update: about us section on homepage

--- a/index.html
+++ b/index.html
@@ -215,26 +215,22 @@
               About Us
             </p>
             <h1 class="text-uppercase mb-4">
-              Transforming Ideas Into Impactful Narratives
+              Kani Kanea Creatives: Illuminating Brands
             </h1>
             <p>
-              At <strong>Kani Kanea Creatives</strong>, we are a team of
-              storytellers, strategists, and visionaries dedicated to helping
-              brands connect with their audiences. Our expertise spans content
-              creation, high-quality production, and innovative digital
-              solutions.
+              Kani Kanea, meaning "First Light," embodies our commitment to
+              creativity and innovation in brand storytelling. As expert
+              storytellers and strategists, we transform ideas into impactful
+              narratives through tailored content creation, high-quality
+              production, and cutting-edge digital solutions
             </p>
             <p class="mb-4">
-              From conceptualizing compelling campaigns to delivering top-tier
-              video production, we empower businesses to share their stories
-              with impact. Our team of experts collaborates closely with clients
-              to understand their unique goals, challenges, and audiences,
-              ensuring every project is tailored to perfection. Leveraging the
-              latest technologies and industry insights, we ensure your brand
-              not only stands out but also establishes a meaningful connection
-              with its audience. In an ever-evolving market, our commitment to
-              innovation and excellence positions your business for lasting
-              success.
+              Our collaborative approach ensures each project precisely aligns
+              with our clients' goals, leveraging the latest technologies to
+              forge meaningful connections between brands and their audiences.
+              By harnessing the symbolic power of first light, we illuminate
+              your brand's unique story, positioning it for enduring success in
+              a dynamic market landscape.
             </p>
 
             <div class="row g-4">
