team page added

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
           <div class="navbar-nav ms-auto py-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link active">About</a>
-            <a href="film.html" class="nav-item nav-link">Films</a>
+            <a href="team.html" class="nav-item nav-link">Team</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
             <!-- <div class="nav-item dropdown">
               <a
@@ -139,33 +139,46 @@
       <div class="container">
         <div class="row g-5">
           <!-- Right Column: Text Content -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+          <div class="wow fadeIn" data-wow-delay="0.5s">
             <p class="d-inline-block bg-secondary text-primary py-1 px-4">
               About Us
             </p>
             <h1 class="text-uppercase mb-4">
-              Crafting Stories, Shaping Experiences
+              Illuminating Brands, Crafting Legacies
             </h1>
             <p>
-              Kani Kanea Creatives is more than just a creative agency—we are a
-              collective of storytellers, strategists, and innovators passionate
-              about bringing ideas to life. Founded with a vision to bridge
-              creativity and strategy, we specialize in creating transformative
-              brand experiences that leave a lasting impression.
+              At Kani Kanea Creatives, we embody the essence of our name—"First
+              Light" in Hawaiian—symbolizing the dawn of creativity and
+              innovation. As a premier creative agency, we are the vanguard of
+              transformative brand experiences, seamlessly fusing strategic
+              insight with artistic vision.
             </p>
             <p>
-              From captivating video production to data-driven digital
-              campaigns, we partner with businesses to deliver solutions that
-              resonate. With a deep understanding of emerging trends and
-              consumer behavior, we help brands connect authentically with their
-              audiences across all touchpoints.
+              Our collective of seasoned professionals—storytellers,
+              strategists, and innovators—is dedicated to illuminating your
+              brand's unique narrative. We specialize in crafting multifaceted
+              campaigns that resonate deeply with target audiences, from
+              compelling video productions to data-driven digital initiatives.
             </p>
             <p class="mb-4">
-              Our team’s expertise spans diverse creative fields, including
-              content creation, brand strategy, advertising, and talent
-              management. Whether you’re launching a new product, refreshing
-              your brand identity, or expanding your digital presence, we’re
-              here to help you tell your story with impact.
+              With a finger on the pulse of emerging trends and consumer
+              behavior, we forge authentic connections between brands and their
+              audiences across all platforms. Our comprehensive expertise
+              encompasses:
+            </p>
+            <ul>
+              <li>Content Creation</li>
+              <li>Brand Strategy</li>
+              <li>Advertising</li>
+              <li>Talent Management</li>
+            </ul>
+            <p>
+              Whether you're unveiling a groundbreaking product, revitalizing
+              your brand identity, or expanding your digital footprint, Kani
+              Kanea Creatives is your partner in crafting impactful, enduring
+              brand stories. We don't just meet industry standards—we set them,
+              ensuring your brand shines brightly in the competitive
+              marketplace.
             </p>
             <div class="row g-4">
               <!-- Highlight 1 -->
@@ -203,17 +216,6 @@
                   a commitment to achieving your unique goals.
                 </p>
               </div>
-            </div>
-          </div>
-
-          <!-- Left Column: Image -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <div class="d-flex flex-column h-100">
-              <img
-                class="img-fluid align-self-end"
-                src="images/creatives-meeting.jpeg"
-                alt="Kani Kanea Creatives"
-              />
             </div>
           </div>
         </div>
@@ -260,11 +262,15 @@
           </div>
           <!-- Newsletter -->
           <div class="col-lg-4 col-md-6">
-            <h4 class="text-uppercase mb-4">Our Story, Your Story</h4>
+            <h4 class="text-uppercase mb-4">
+              Illuminating Narratives: Your Vision, Our Craft
+            </h4>
             <p>
-              "Stories are the threads that connect us all. At Kani Kanea
-              Creatives, we believe in crafting narratives that inspire, engage,
-              and transform."
+              At Kani Kanea Creatives, we weave stories that connect and
+              transform. Our name, meaning 'First Light,' symbolizes the dawn of
+              creativity and innovation. We craft compelling narratives that
+              inspire and engage, bringing your vision to life with professional
+              expertise."
             </p>
             <!-- Social Media Links -->
             <div class="d-flex pt-1 m-n1">
