--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <div class="navbar-nav ms-auto py-0">
             <a href="index.html" class="nav-item nav-link active">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
-            <a href="film.html" class="nav-item nav-link">Films</a>
+            <a href="team.html" class="nav-item nav-link">Team</a>
             <a href="contact.html" class="nav-item nav-link">Contact</a>
             <!-- <div class="nav-item dropdown">
             <a
@@ -198,59 +198,47 @@
     <!-- About Start -->
     <section class="container-xxl py-5">
       <div class="container">
-        <div class="row g-5">
-          <!-- Left Column: Image and Experience -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <div class="d-flex flex-column h-100">
-              <img
-                class="img-fluid align-self-end"
-                src="images/creatives-meeting.jpeg"
-                alt="Kani Kanea Creatives"
-              />
+        <!-- Right Column: Text Content -->
+        <div class="wow fadeIn" data-wow-delay="0.5s">
+          <p class="d-inline-block bg-secondary text-primary py-1 px-4">
+            About Us
+          </p>
+          <h1 class="text-uppercase mb-4">
+            Kani Kanea Creatives: Illuminating Brands
+          </h1>
+          <p>
+            Kani Kanea, meaning "First Light," embodies our commitment to
+            creativity and innovation in brand storytelling. As expert
+            storytellers and strategists, we transform ideas into impactful
+            narratives through tailored content creation, high-quality
+            production, and cutting-edge digital solutions
+          </p>
+          <p class="mb-4">
+            Our collaborative approach ensures each project precisely aligns
+            with our clients' goals, leveraging the latest technologies to forge
+            meaningful connections between brands and their audiences. By
+            harnessing the symbolic power of first light, we illuminate your
+            brand's unique story, positioning it for enduring success in a
+            dynamic market landscape.
+          </p>
+
+          <div class="row g-4">
+            <!-- Highlight 1 -->
+            <div class="col-md-6">
+              <h3 class="text-uppercase mb-3">A Legacy of Innovation</h3>
+              <p class="mb-0">
+                For years, We've been empowering brands with innovative
+                solutions, creating meaningful impacts that last.
+              </p>
             </div>
-          </div>
-          <!-- Right Column: Text Content -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-            <p class="d-inline-block bg-secondary text-primary py-1 px-4">
-              About Us
-            </p>
-            <h1 class="text-uppercase mb-4">
-              Kani Kanea Creatives: Illuminating Brands
-            </h1>
-            <p>
-              Kani Kanea, meaning "First Light," embodies our commitment to
-              creativity and innovation in brand storytelling. As expert
-              storytellers and strategists, we transform ideas into impactful
-              narratives through tailored content creation, high-quality
-              production, and cutting-edge digital solutions
-            </p>
-            <p class="mb-4">
-              Our collaborative approach ensures each project precisely aligns
-              with our clients' goals, leveraging the latest technologies to
-              forge meaningful connections between brands and their audiences.
-              By harnessing the symbolic power of first light, we illuminate
-              your brand's unique story, positioning it for enduring success in
-              a dynamic market landscape.
-            </p>
 
-            <div class="row g-4">
-              <!-- Highlight 1 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">A Legacy of Innovation</h3>
-                <p class="mb-0">
-                  For years, We've been empowering brands with innovative
-                  solutions, creating meaningful impacts that last.
-                </p>
-              </div>
-
-              <!-- Highlight 2 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">50+ Projects</h3>
-                <p class="mb-0">
-                  Successfully delivered creative projects for businesses across
-                  various industries, building trust and lasting impact.
-                </p>
-              </div>
+            <!-- Highlight 2 -->
+            <div class="col-md-6">
+              <h3 class="text-uppercase mb-3">50+ Projects</h3>
+              <p class="mb-0">
+                Successfully delivered creative projects for businesses across
+                various industries, building trust and lasting impact.
+              </p>
             </div>
           </div>
         </div>
@@ -542,11 +530,15 @@
           </div>
           <!-- Newsletter -->
           <div class="col-lg-4 col-md-6">
-            <h4 class="text-uppercase mb-4">Our Story, Your Story</h4>
+            <h4 class="text-uppercase mb-4">
+              Illuminating Narratives: Your Vision, Our Craft
+            </h4>
             <p>
-              "Stories are the threads that connect us all. At Kani Kanea
-              Creatives, we believe in crafting narratives that inspire, engage,
-              and transform."
+              At Kani Kanea Creatives, we weave stories that connect and
+              transform. Our name, meaning 'First Light,' symbolizes the dawn of
+              creativity and innovation. We craft compelling narratives that
+              inspire and engage, bringing your vision to life with professional
+              expertise."
             </p>
             <!-- Social Media Links -->
             <div class="d-flex pt-1 m-n1">
