--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
           <div class="navbar-nav ms-auto py-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
             <a href="about.html" class="nav-item nav-link">About</a>
-            <a href="film.html" class="nav-item nav-link">Films</a>
+            <a href="team.html" class="nav-item nav-link">Team</a>
             <a href="contact.html" class="nav-item nav-link active">Contact</a>
             <!-- <div class="nav-item dropdown">
                 <a
@@ -289,11 +289,15 @@
           </div>
           <!-- Newsletter -->
           <div class="col-lg-4 col-md-6">
-            <h4 class="text-uppercase mb-4">Our Story, Your Story</h4>
+            <h4 class="text-uppercase mb-4">
+              Illuminating Narratives: Your Vision, Our Craft
+            </h4>
             <p>
-              "Stories are the threads that connect us all. At Kani Kanea
-              Creatives, we believe in crafting narratives that inspire, engage,
-              and transform."
+              At Kani Kanea Creatives, we weave stories that connect and
+              transform. Our name, meaning 'First Light,' symbolizes the dawn of
+              creativity and innovation. We craft compelling narratives that
+              inspire and engage, bringing your vision to life with professional
+              expertise."
             </p>
             <!-- Social Media Links -->
             <div class="d-flex pt-1 m-n1">
