update on kani kanea features

--- a/index.html
+++ b/index.html
@@ -385,47 +385,104 @@
     </section>
     <!-- Service End -->
 
-    <!-- Why Choose Us Start -->
-    <section class="container-xxl py-5">
+    <!-- Features Start -->
+    <div class="container-fluid features overflow-hidden py-5">
       <div class="container">
-        <div class="row g-5">
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <img
-              class="img-fluid w-100"
-              src="images/office-setting.jpg"
-              alt="Why Choose Us"
-            />
+        <div
+          class="text-center mx-auto mb-5 wow fadeInUp"
+          data-wow-delay="0.1s"
+          style="max-width: 600px"
+        >
+          <p class="d-inline-block bg-secondary text-primary py-1 px-4">
+            Kani Kanea Creatives
+          </p>
+          <h1 class="text-uppercase">Why choose us</h1>
+        </div>
+        <div class="row g-4 justify-content-center text-center">
+          <!-- Feature 1 -->
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="feature-item text-center p-4 bg-secondary">
+              <div class="feature-icon p-2 mb-3">
+                <i class="fas fa-pencil-alt fa-3x text-light"></i>
+              </div>
+              <div class="feature-content d-flex flex-column">
+                <h5 class="mb-3">Expert Team</h5>
+                <p class="mb-2 text-start">
+                  Our seasoned professionals bring a wealth of experience and
+                  fresh perspectives to your projects, ensuring exceptional
+                  results that exceed expectations.
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.3s">
-            <h1 class="text-uppercase mb-4">Why Choose Us</h1>
-            <div>
-              <h6 class="text-uppercase mb-3">
-                <i class="fa fa-check text-primary me-2"></i>Innovative
-                Solutions
-              </h6>
-              <h6 class="text-uppercase mb-3">
-                <i class="fa fa-check text-primary me-2"></i>Expert Team
-              </h6>
-              <h6 class="text-uppercase mb-3">
-                <i class="fa fa-check text-primary me-2"></i>Client-Centric
-                Approach
-              </h6>
-              <h6 class="text-uppercase mb-3">
-                <i class="fa fa-check text-primary me-2"></i>High-Quality
-                Production
-              </h6>
-              <h6 class="text-uppercase mb-3">
-                <i class="fa fa-check text-primary me-2"></i>Proven Results
-              </h6>
-              <h6 class="text-uppercase">
-                <i class="fa fa-check text-primary me-2"></i>Global Reach
-              </h6>
+          <!-- Feature 2 -->
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
+            <div class="feature-item text-center p-4 bg-secondary">
+              <div class="feature-icon p-2 mb-3">
+                <i class="fas fa-video fa-3x text-light"></i>
+              </div>
+              <div class="feature-content d-flex flex-column">
+                <h5 class="mb-3">Digital Content Planning</h5>
+                <p class="mb-2 text-start">
+                  In-depth editorial planning to help clients create and
+                  distribute digital content that engages audiences and achieves
+                  strategic marketing objectives.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Feature 3 -->
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
+            <div class="feature-item text-center p-4 bg-secondary">
+              <div class="feature-icon p-2 mb-3">
+                <i class="fas fa-users fa-3x text-light"></i>
+              </div>
+              <div class="feature-content d-flex flex-column">
+                <h5 class="mb-3">Community Engagement</h5>
+                <p class="mb-2 text-start">
+                  Daily management of social media platforms, including posting,
+                  and engagement with customers across Facebook, Instagram,
+                  Twitter, and more.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Feature 4 -->
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
+            <div class="feature-item text-center p-4 bg-secondary">
+              <div class="feature-icon p-2 mb-3">
+                <i class="fas fa-bullhorn fa-3x text-light"></i>
+              </div>
+              <div class="feature-content d-flex flex-column">
+                <h5 class="mb-3">Ad Buying</h5>
+                <p class="mb-2 text-start">
+                  Managing ad placements across Google, Facebook, Instagram,
+                  YouTube, and Twitter to optimize campaign performance and
+                  reach.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Feature 5 -->
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
+            <div class="feature-item text-center p-4 bg-secondary">
+              <div class="feature-icon p-2 mb-3">
+                <i class="fas fa-globe fa-3x text-light"></i>
+              </div>
+              <div class="feature-content d-flex flex-column">
+                <h5 class="mb-3">Global Reach</h5>
+                <p class="mb-2 text-start">
+                  Our international presence allows us to provide diverse
+                  insights and expand your brand's horizons worldwide. We
+                  connect you with global audiences & opportunities.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- Why Choose Us End -->
+    </div>
+    <!-- Features End -->
 
     <!-- Projects Start -->
     <section class="container-xxl py-5">
