--- a/team.html
+++ b/team.html
@@ -134,13 +134,13 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- About Start -->
+    <!-- Team Start -->
     <section class="container-xxl py-5">
       <div class="container">
         <!-- team 1 -->
         <div class="row g-5">
           <!-- Left Column: Image -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+          <div class="col-lg-6 wow zoomIn" data-wow-delay="0.2s">
             <div class="d-flex flex-column h-100">
               <img
                 class="img-fluid align-self-end"
@@ -150,7 +150,7 @@
             </div>
           </div>
           <!-- Right Column: Text Content -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
             <p class="d-inline-block bg-secondary text-primary py-1 px-4">
               CEO / Creative Director
             </p>
@@ -202,7 +202,7 @@
         <!-- team 2 -->
         <div class="row g-5 mt-5">
           <!-- Left Column: Image -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+          <div class="col-lg-6 wow zoomIn" data-wow-delay="0.2s">
             <div class="d-flex flex-column h-100">
               <img
                 class="img-fluid align-self-end"
@@ -212,7 +212,7 @@
             </div>
           </div>
           <!-- Right Column: Text Content -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
             <p class="d-inline-block bg-secondary text-primary py-1 px-4">
               Chief Operating Officer
             </p>
@@ -275,7 +275,7 @@
         <!-- team 3 -->
         <div class="row g-5 mt-5">
           <!-- Left Column: Image -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.2s">
             <div class="d-flex flex-column h-100">
               <img
                 class="img-fluid align-self-end"
@@ -285,7 +285,7 @@
             </div>
           </div>
           <!-- Right Column: Text Content -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.4s">
             <p class="d-inline-block bg-secondary text-primary py-1 px-4">
               Chief Financial Officer
             </p>
@@ -338,7 +338,7 @@
         </div>
       </div>
     </section>
-    <!-- About End -->
+    <!-- Team End -->
 
     <!-- Footer Start -->
     <footer
