updated features with appropriate icons

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     <!-- Carousel End -->
 
     <!-- About Start -->
-    <section class="container-xxl py-5">
+    <section class="container-xxl py-5 about-header">
       <div class="container">
         <!-- Right Column: Text Content -->
         <div class="wow fadeIn" data-wow-delay="0.5s">
@@ -403,7 +403,25 @@
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
             <div class="feature-item text-center p-4 bg-secondary">
               <div class="feature-icon p-2 mb-3">
-                <i class="fas fa-pencil-alt fa-3x text-light"></i>
+                <i class="fas fa-lightbulb fa-3x text-light"></i>
+                <!-- Innovation -->
+              </div>
+              <div class="feature-content d-flex flex-column">
+                <h5 class="mb-3">Innovative Solutions</h5>
+                <p class="mb-2 text-start">
+                  At Kani Kanea, meaning "First Light," we embody the dawn of
+                  creativity and innovation in every project. Our cutting-edge
+                  approaches illuminate new possibilities for your brand.
+                </p>
+              </div>
+            </div>
+          </div>
+          <!-- Feature 2 -->
+          <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
+            <div class="feature-item text-center p-4 bg-secondary">
+              <div class="feature-icon p-2 mb-3">
+                <i class="fas fa-user-tie fa-3x text-light"></i>
+                <!-- Expert Team -->
               </div>
               <div class="feature-content d-flex flex-column">
                 <h5 class="mb-3">Expert Team</h5>
@@ -415,11 +433,12 @@
               </div>
             </div>
           </div>
-          <!-- Feature 2 -->
+          <!-- Feature 3 -->
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.2s">
             <div class="feature-item text-center p-4 bg-secondary">
               <div class="feature-icon p-2 mb-3">
-                <i class="fas fa-video fa-3x text-light"></i>
+                <i class="fas fa-calendar-alt fa-3x text-light"></i>
+                <!-- Planning -->
               </div>
               <div class="feature-content d-flex flex-column">
                 <h5 class="mb-3">Digital Content Planning</h5>
@@ -431,11 +450,12 @@
               </div>
             </div>
           </div>
-          <!-- Feature 3 -->
+          <!-- Feature 4 -->
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
             <div class="feature-item text-center p-4 bg-secondary">
               <div class="feature-icon p-2 mb-3">
-                <i class="fas fa-users fa-3x text-light"></i>
+                <i class="fas fa-comments fa-3x text-light"></i>
+                <!-- Engagement -->
               </div>
               <div class="feature-content d-flex flex-column">
                 <h5 class="mb-3">Community Engagement</h5>
@@ -447,11 +467,12 @@
               </div>
             </div>
           </div>
-          <!-- Feature 4 -->
+          <!-- Feature 5 -->
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.4s">
             <div class="feature-item text-center p-4 bg-secondary">
               <div class="feature-icon p-2 mb-3">
                 <i class="fas fa-bullhorn fa-3x text-light"></i>
+                <!-- Ad Buying -->
               </div>
               <div class="feature-content d-flex flex-column">
                 <h5 class="mb-3">Ad Buying</h5>
@@ -463,11 +484,12 @@
               </div>
             </div>
           </div>
-          <!-- Feature 5 -->
+          <!-- Feature 6 -->
           <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.5s">
             <div class="feature-item text-center p-4 bg-secondary">
               <div class="feature-icon p-2 mb-3">
                 <i class="fas fa-globe fa-3x text-light"></i>
+                <!-- Global Reach -->
               </div>
               <div class="feature-content d-flex flex-column">
                 <h5 class="mb-3">Global Reach</h5>
@@ -484,7 +506,7 @@
     </div>
     <!-- Features End -->
 
-    <!-- Projects Start -->
+    <!-- Team Start -->
     <section class="container-xxl py-5">
       <div class="container">
         <div
@@ -546,7 +568,7 @@
         </div>
       </div>
     </section>
-    <!-- Projects End -->
+    <!-- Team End -->
 
     <!-- Footer Start -->
     <footer
