updated team navigation link on homepage

--- a/index.html
+++ b/index.html
@@ -519,53 +519,55 @@
           </p>
           <h1 class="text-uppercase">Meet our Team</h1>
         </div>
-        <div class="row g-4">
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="team-item">
-              <div class="team-img position-relative overflow-hidden">
-                <img
-                  class="img-fluid"
-                  src="images/Fred-Appeagyei.png"
-                  alt="Fred Yaw Osafu Appiagyei"
-                />
+        <a href="team.html">
+          <div class="row g-4">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+              <div class="team-item">
+                <div class="team-img position-relative overflow-hidden">
+                  <img
+                    class="img-fluid"
+                    src="images/Fred-Appeagyei.png"
+                    alt="Fred Yaw Osafu Appiagyei"
+                  />
+                </div>
+                <div class="bg-secondary text-center p-4 fred">
+                  <h5 class="text-uppercase">Fred Yaw Osafo Appiagyei</h5>
+                  <span class="text-primary">CEO / Creative Director</span>
+                </div>
               </div>
-              <div class="bg-secondary text-center p-4 fred">
-                <h5 class="text-uppercase">Fred Yaw Osafo Appiagyei</h5>
-                <span class="text-primary">CEO / Creative Director</span>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+              <div class="team-item">
+                <div class="team-img position-relative overflow-hidden">
+                  <img
+                    class="img-fluid"
+                    src="images/Steffan-Baffour.jpg"
+                    alt="Steffan Baffuor"
+                  />
+                </div>
+                <div class="bg-secondary text-center p-4">
+                  <h5 class="text-uppercase">Stefan Baffour Osei</h5>
+                  <span class="text-primary">Chief Operating Officer</span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+              <div class="team-item">
+                <div class="team-img position-relative overflow-hidden">
+                  <img
+                    class="img-fluid"
+                    src="images/Larry-Appeagyei.jpg"
+                    alt="Larry Kwaku Appeagyei"
+                  />
+                </div>
+                <div class="bg-secondary text-center p-4">
+                  <h5 class="text-uppercase">Larry Kwaku Appeagyei</h5>
+                  <span class="text-primary">Chief Financial Officer</span>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="team-item">
-              <div class="team-img position-relative overflow-hidden">
-                <img
-                  class="img-fluid"
-                  src="images/Steffan-Baffour.jpg"
-                  alt="Steffan Baffuor"
-                />
-              </div>
-              <div class="bg-secondary text-center p-4">
-                <h5 class="text-uppercase">Stefan Baffour Osei</h5>
-                <span class="text-primary">Chief Operating Officer</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="team-item">
-              <div class="team-img position-relative overflow-hidden">
-                <img
-                  class="img-fluid"
-                  src="images/Larry-Appeagyei.jpg"
-                  alt="Larry Kwaku Appeagyei"
-                />
-              </div>
-              <div class="bg-secondary text-center p-4">
-                <h5 class="text-uppercase">Larry Kwaku Appeagyei</h5>
-                <span class="text-primary">Chief Financial Officer</span>
-              </div>
-            </div>
-          </div>
-        </div>
+        </a>
       </div>
     </section>
     <!-- Team End -->
